load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_module", "ocaml_ns_library", "ocaml_signature")

ocaml_signature(
    name = "clic__sig",
    src = ":clic.mli",
    opts = [
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_error_monad",
        "-open",
        "Tezos_error_monad.TzLwtreslib",
    ],
    deps = [
        "@ocaml//lib/lwt",
        "@ocaml//lib/re",
        "@tezos//src/lib_error_monad:Tezos_error_monad",
        "@tezos//src/lib_lwt_result_stdlib:Tezos_lwt_result_stdlib",
        "@tezos//src/lib_stdlib:Tezos_stdlib",
    ],
)

ocaml_module(
    name = "clic",
    opts = [
        "-open",
        "Tezos_stdlib",
        "-open",
        "Tezos_error_monad",
        "-open",
        "Tezos_error_monad.TzLwtreslib",
    ],
    sig = ":clic__sig",
    struct = ":clic.ml",
    deps = [
        "@ocaml//lib/lwt",
        "@ocaml//lib/re",
        "@tezos//src/lib_error_monad:Tezos_error_monad",
        "@tezos//src/lib_lwt_result_stdlib:Tezos_lwt_result_stdlib",
        "@tezos//src/lib_stdlib:Tezos_stdlib",
    ],
)

# okapi:auto
# okapi:public_name tezos-clic
ocaml_ns_library(
    name = "Tezos_clic",
    submodules = [":clic"],
    visibility = ["//visibility:public"],
)
