load("@obazl_rules_ocaml//ocaml:rules.bzl", "ocaml_module", "ocaml_ns_library", "ocaml_signature")

ocaml_module(
    name = "client_config",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_rpc_http",
        "-open",
        "Tezos_rpc_http_client_unix",
        "-open",
        "Tezos_shell_services",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_client_base",
        "-open",
        "Tezos_client_commands",
        "-open",
        "Tezos_mockup_commands",
        "-linkall",
    ],
    struct = ":client_config.ml",
    deps = [
        "@lwt-exit//:lwt-exit",
        "@tezos//src/lib_base:Tezos_base",
        "@tezos//src/lib_client_base:Tezos_client_base",
        "@tezos//src/lib_client_commands:Tezos_client_commands",
        "@tezos//src/lib_mockup:Tezos_mockup",
        "@tezos//src/lib_mockup:Tezos_mockup_commands",
        "@tezos//src/lib_mockup:Tezos_mockup_registration",
        "@tezos//src/lib_proxy:Tezos_proxy",
        "@tezos//src/lib_rpc_http:Tezos_rpc_http_client_unix",
        "@tezos//src/lib_shell_services:Tezos_shell_services",
        "@tezos//src/lib_signer_backends/unix:Tezos_signer_backends_unix",
        "@tezos//src/lib_stdlib_unix:Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "client_context_unix__sig",
    src = ":client_context_unix.mli",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_rpc_http",
        "-open",
        "Tezos_rpc_http_client_unix",
        "-open",
        "Tezos_shell_services",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_client_base",
        "-open",
        "Tezos_client_commands",
        "-open",
        "Tezos_mockup_commands",
        "-linkall",
    ],
    deps = [
        "@lwt-exit//:lwt-exit",
        "@tezos//src/lib_base:Tezos_base",
        "@tezos//src/lib_client_base:Tezos_client_base",
        "@tezos//src/lib_client_commands:Tezos_client_commands",
        "@tezos//src/lib_mockup:Tezos_mockup",
        "@tezos//src/lib_mockup:Tezos_mockup_commands",
        "@tezos//src/lib_mockup:Tezos_mockup_registration",
        "@tezos//src/lib_proxy:Tezos_proxy",
        "@tezos//src/lib_rpc_http:Tezos_rpc_http_client_unix",
        "@tezos//src/lib_shell_services:Tezos_shell_services",
        "@tezos//src/lib_signer_backends/unix:Tezos_signer_backends_unix",
        "@tezos//src/lib_stdlib_unix:Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "client_context_unix",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_rpc_http",
        "-open",
        "Tezos_rpc_http_client_unix",
        "-open",
        "Tezos_shell_services",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_client_base",
        "-open",
        "Tezos_client_commands",
        "-open",
        "Tezos_mockup_commands",
        "-linkall",
    ],
    sig = ":client_context_unix__sig",
    struct = ":client_context_unix.ml",
    deps = [
        "@lwt-exit//:lwt-exit",
        "@tezos//src/lib_base:Tezos_base",
        "@tezos//src/lib_client_base:Tezos_client_base",
        "@tezos//src/lib_client_commands:Tezos_client_commands",
        "@tezos//src/lib_mockup:Tezos_mockup",
        "@tezos//src/lib_mockup:Tezos_mockup_commands",
        "@tezos//src/lib_mockup:Tezos_mockup_registration",
        "@tezos//src/lib_proxy:Tezos_proxy",
        "@tezos//src/lib_rpc_http:Tezos_rpc_http_client_unix",
        "@tezos//src/lib_shell_services:Tezos_shell_services",
        "@tezos//src/lib_signer_backends/unix:Tezos_signer_backends_unix",
        "@tezos//src/lib_stdlib_unix:Tezos_stdlib_unix",
    ],
)

ocaml_signature(
    name = "client_main_run__sig",
    src = ":client_main_run.mli",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_rpc_http",
        "-open",
        "Tezos_rpc_http_client_unix",
        "-open",
        "Tezos_shell_services",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_client_base",
        "-open",
        "Tezos_client_commands",
        "-open",
        "Tezos_mockup_commands",
        "-linkall",
    ],
    deps = [
        ":client_config",
        ":client_context_unix",
        "@lwt-exit//:lwt-exit",
        "@tezos//src/lib_base:Tezos_base",
        "@tezos//src/lib_client_base:Tezos_client_base",
        "@tezos//src/lib_client_commands:Tezos_client_commands",
        "@tezos//src/lib_mockup:Tezos_mockup",
        "@tezos//src/lib_mockup:Tezos_mockup_commands",
        "@tezos//src/lib_mockup:Tezos_mockup_registration",
        "@tezos//src/lib_proxy:Tezos_proxy",
        "@tezos//src/lib_rpc_http:Tezos_rpc_http_client_unix",
        "@tezos//src/lib_shell_services:Tezos_shell_services",
        "@tezos//src/lib_signer_backends/unix:Tezos_signer_backends_unix",
        "@tezos//src/lib_stdlib_unix:Tezos_stdlib_unix",
    ],
)

ocaml_module(
    name = "client_main_run",
    opts = [
        "-open",
        "Tezos_base__TzPervasives",
        "-open",
        "Tezos_rpc_http",
        "-open",
        "Tezos_rpc_http_client_unix",
        "-open",
        "Tezos_shell_services",
        "-open",
        "Tezos_stdlib_unix",
        "-open",
        "Tezos_client_base",
        "-open",
        "Tezos_client_commands",
        "-open",
        "Tezos_mockup_commands",
        "-linkall",
    ],
    sig = ":client_main_run__sig",
    struct = ":client_main_run.ml",
    deps = [
        ":client_config",
        ":client_context_unix",
        "@lwt-exit//:lwt-exit",
        "@tezos//src/lib_base:Tezos_base",
        "@tezos//src/lib_client_base:Tezos_client_base",
        "@tezos//src/lib_client_commands:Tezos_client_commands",
        "@tezos//src/lib_mockup:Tezos_mockup",
        "@tezos//src/lib_mockup:Tezos_mockup_commands",
        "@tezos//src/lib_mockup:Tezos_mockup_registration",
        "@tezos//src/lib_proxy:Tezos_proxy",
        "@tezos//src/lib_rpc_http:Tezos_rpc_http_client_unix",
        "@tezos//src/lib_shell_services:Tezos_shell_services",
        "@tezos//src/lib_signer_backends/unix:Tezos_signer_backends_unix",
        "@tezos//src/lib_stdlib_unix:Tezos_stdlib_unix",
    ],
)

# okapi:auto
# okapi:public_name tezos-client-base-unix
ocaml_ns_library(
    name = "Tezos_client_base_unix",
    submodules = [
        ":client_config",
        ":client_context_unix",
        ":client_main_run",
    ],
    visibility = ["//visibility:public"],
)
